--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.responsive-container{
-    @apply container mx-auto px-5 md:px-16 lg:px-5;
+* {
+  font-family: "Kumbh Sans", sans-serif;
+}
+.responsive-container {
+  @apply container mx-auto px-5 md:px-16 lg:px-5;
 }
